--- a/GridScrollExtension-addon/pom.xml
+++ b/GridScrollExtension-addon/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.extension</groupId>
 	<artifactId>GridScrollExtension</artifactId>
 	<packaging>jar</packaging>
-	<version>2.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<name>GridScrollExtension Add-on</name>
 
 	<prerequisites>
