--- a/GridScrollExtension-demo/pom.xml
+++ b/GridScrollExtension-demo/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.extension</groupId>
 	<artifactId>GridScrollExtension-demo</artifactId>
 	<packaging>war</packaging>
-	<version>2.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<name>GridScrollExtension Add-on Demo</name>
 
 	<prerequisites>
@@ -21,10 +21,9 @@
 		<jetty.plugin.version>9.3.9.v20160517</jetty.plugin.version>
 	</properties>
 
-    <!--
 	<organization>
-		<name>My Name</name>
-		<url>https://github.com/mygithubaccount/MyComponent/</url>
+		<name>Vaadin Community</name>
+		<url>https://github.com/tatuLund/grid-scroll-extension</url>
 	</organization>
 
 	<scm>
@@ -38,7 +37,6 @@
 		<system>GitHub</system>
 		<url>https://github.com/mygithubaccount/MyComponent/issues</url>
 	</issueManagement>
-    -->
 
 	<licenses>
 		<license>
