--- a/GridScrollExtension-addon/pom.xml
+++ b/GridScrollExtension-addon/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.extension</groupId>
 	<artifactId>GridScrollExtension</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>GridScrollExtension Add-on</name>
 
 	<prerequisites>
@@ -28,12 +28,12 @@
 		<Vaadin-Addon>${project.artifactId}-${project.version}.jar</Vaadin-Addon>
 	</properties>
 
-    <!--
 	<organization>
-		<name>My Name</name>
-		<url>https://github.com/mygithubaccount/MyComponent/</url>
+		<name>Vaadin Community</name>
+		<url>https://github.com/TatuLund/grid-scroll-extension</url>
 	</organization>
 
+    <!--
 	<scm>
 		<url>git://github.com/mygithubaccount/MyComponent.git</url>
 		<connection>scm:git:git://github.com/mygithubaccount/MyComponent.git</connection>
