Updating metadata for manifest

--- a/GridScrollExtension-addon/pom.xml
+++ b/GridScrollExtension-addon/pom.xml
@@ -28,24 +28,22 @@
 		<Vaadin-Addon>${project.artifactId}-${project.version}.jar</Vaadin-Addon>
 	</properties>
 
-    <!--
 	<organization>
-		<name>My Name</name>
-		<url>https://github.com/mygithubaccount/MyComponent/</url>
+		<name>Tatu Lund</name>
+		<url>https://github.com/tatulund/grid-scroll-extension/</url>
 	</organization>
 
-	<scm>
-		<url>git://github.com/mygithubaccount/MyComponent.git</url>
-		<connection>scm:git:git://github.com/mygithubaccount/MyComponent.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com:/mygithubaccount/${componentClassName}.git</developerConnection>
-		<tag>MyComponent add-on for Vaadin</tag>
+    <scm>
+		<url>git://github.com/tatulund/grid-scroll-extension.git</url>
+		<connection>scm:git:git://github.com/tatulund/grid-scroll-extension.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:/tatulund/${componentClassName}.git</developerConnection>
+		<tag>GridScrollExtension add-on for Vaadin</tag>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub</system>
-		<url>https://github.com/mygithubaccount/MyComponent/issues</url>
+		<url>https://github.com/tatulund/grid-scroll-extension/issues</url>
 	</issueManagement>
-    -->
 
 	<licenses>
 		<license>
