--- a/GridScrollExtension-demo/pom.xml
+++ b/GridScrollExtension-demo/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.extension</groupId>
 	<artifactId>GridScrollExtension-demo</artifactId>
 	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<name>GridScrollExtension Add-on Demo</name>
 
 	<prerequisites>
